--- a/continuous_distributions.ipynb
+++ b/continuous_distributions.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -40,14 +40,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Clone the repo for data at https://github.com/fivethirtyeight/uber-tlc-foil-response.git \n",
-    "- unzip uber-raw-data-janjune-15\n",
+    "- Get the data from here https://archive.ics.uci.edu/ml/machine-learning-databases/isolet/\n",
+    "- unzip isolet1+2+3+4.data\n",
     "- modify the path below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -58,21 +58,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "isolet = pd.read_csv(PATH_DATA + 'isolet1+2+3+4.data', header=None)\n",
-    "isolet_features = a.drop(617, axis=1)"
+    "isolet_features = isolet.drop(617, axis=1)\n",
+    "isolet_labels = isolet[617]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Uniform"
+    "# 1. Uniform \n",
+    "We know that there are equal number of samples per letter. Therefore, the distribution of the labels must be uniform between 1 and 26."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD+lJREFUeJzt3GGMZWV9x/HvD9eFIoZQW3YTlopGoquxWW1d29Am17RF\nJNElvkDUpFq1MUHUtH3hrm92X1VpqglJwxtFszUQiiYWaAoCwZtGE4EqW1d2xU3aRdi6I6lUJSRm\np/vvizmL4zjL3Dt3zp6ZZ7+fZMKZZ/73PP+Tw/7m2efes6kqJEntOmfoBiRJ/TLoJalxBr0kNc6g\nl6TGGfSS1DiDXpIat2LQJ9mW5MEkjyU5mOSj3fjeJE8l+U73ddWi1+xJciTJ4SRX9nkBkqQXlpU+\nR59kK7C1qg4kuQD4NrALeBfw86r67JL67cBtwJuAbcADwOXlB/YlaRArruir6nhVHeiOnwUOA5d0\nP84yL9kF3F5V81V1FDgC7FybdiVJ05pqjz7JZcAO4KFu6IYkB5J8PsmF3dglwJOLXnaMX/5ikCSd\nYRMHfbdt8xXg493K/mbglVW1AzgOfKafFiVJs9g0SVGSTSyE/Jeq6k6Aqnp6UcnngLu742PApYt+\ntq0bW3pO9+wlaRWqarlt89OadEX/BeBQVd10aqB7k/aUdwLf647vAq5LsjnJK4BXAQ+fptlmv/bu\n3Tt4D16f13c2Xl/L11a1uvXxiiv6JFcA7wUOJnkUKOCTwHuS7ABOAkeBD3fhfSjJHcAh4ARwfa22\nO0nSzFYM+qr6JvCiZX507wu85lPAp2boS5K0Rnwytiej0WjoFnrl9W1sLV9fy9e2Wis+MNXbxIk7\nOpI0pSRUT2/GSpI2KINekhq37oP+5MmTbNt2OZs2nTvR1wc/+LGhW5akdWXd79HPz8+zefO5VD03\nwVnv5cUv/nNOnPjZRD2cc875nDw5yXknr53mnFu2vJzjx49OVLt162XMzT0xUW0fvQ5de7bPP03t\n0PNPUzv0/NP8GVwvVrNHv0GC/jyq5ic46z3A1Sx81H+iLnqoneac5wG/mLCWKc7bR69D157t809T\nO/T809QOP/9G+1DIaoJ+on8CQX35BdP9jytJ01v3e/SSpNkY9JLUOINekhpn0EtS4wx6SWqcQS9J\njTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4\ng16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS41YM+iTbkjyY5LEk\nB5N8rBu/KMl9SR5P8rUkFy56zZ4kR5IcTnJlnxcgSXphk6zo54G/rqrXAX8IfCTJa4DdwANV9Wrg\nQWAPQJLXAtcC24G3ATcnSR/NS5JWtmLQV9XxqjrQHT8LHAa2AbuA/V3ZfuCa7vgdwO1VNV9VR4Ej\nwM417luSNKGp9uiTXAbsAL4FbKmqOVj4ZQBc3JVdAjy56GXHujFJ0gA2TVqY5ALgK8DHq+rZJLWk\nZOn3K9q3b9/zx6PRiNFoNO0pJKlp4/GY8Xg80zlStXI+J9kE/AtwT1Xd1I0dBkZVNZdkK/D1qtqe\nZDdQVXVjV3cvsLeqHlpyzppk7vn5eTZvPo+q+Qku5x7gaib/nZMeavs4Z1+1Q88/Te3ZPv80tUPP\nP03t8PNPkkPrSRKqaqr3PSfduvkCcOhUyHfuAt7fHb8PuHPR+HVJNid5BfAq4OFpmpIkrZ0Vt26S\nXAG8FziY5FEWfk1+ErgRuCPJB4AnWPikDVV1KMkdwCHgBHD9REt3SVIvJtq66WVit27WQe3Q809T\ne7bPP03t0PNPUzv8/BttHdrn1o0kaYMy6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxB\nL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS\n1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mN\nM+glqXEGvSQ1bsWgT3JLkrkk3100tjfJU0m+031dtehne5IcSXI4yZV9NS5JmswkK/ovAm9dZvyz\nVfXG7utegCTbgWuB7cDbgJuTZM26lSRNbcWgr6pvAM8s86PlAnwXcHtVzVfVUeAIsHOmDiVJM5ll\nj/6GJAeSfD7Jhd3YJcCTi2qOdWOSpIGsNuhvBl5ZVTuA48Bn1q4lSdJa2rSaF1XV04u+/Rxwd3d8\nDLh00c+2dWPL2rdv3/PHo9GI0Wi0mnYkqVnj8ZjxeDzTOVJVKxcllwF3V9Xru++3VtXx7vivgDdV\n1XuSvBa4FXgzC1s29wOX1zKTJFlu+NfMz8+zefN5VM1PcDn3AFcDK5+366KH2j7O2Vft0PNPU3u2\nzz9N7dDzT1M7/PyT5NB6koSqmupDLiuu6JPcBoyAlyX5IbAXeEuSHcBJ4CjwYYCqOpTkDuAQcAK4\nfqI0lyT1ZqIVfS8Tu6JfB7VDzz9N7dk+/zS1Q88/Te3w82+0tehqVvQ+GStJjTPoJalxBr0kNc6g\nl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJ\napxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TG\nGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxq0Y9EluSTKX5LuLxi5Kcl+Sx5N8\nLcmFi362J8mRJIeTXNlX45KkyUyyov8i8NYlY7uBB6rq1cCDwB6AJK8FrgW2A28Dbk6StWtXkjSt\nFYO+qr4BPLNkeBewvzveD1zTHb8DuL2q5qvqKHAE2Lk2rUqSVmO1e/QXV9UcQFUdBy7uxi8BnlxU\nd6wbkyQNZK3ejK01Oo8kaY1tWuXr5pJsqaq5JFuBH3fjx4BLF9Vt68aWtW/fvuePR6MRo9Fole1I\nUpvG4zHj8Ximc6Rq5cV4ksuAu6vq9d33NwI/qaobk3wCuKiqdndvxt4KvJmFLZv7gctrmUmSLDf8\na+bn59m8+Tyq5ie4nHuAq5n8LxjpobaPc/ZVO/T809Se7fNPUzv0/NPUDj//JDm0niShqqb6kMuK\nK/oktwEj4GVJfgjsBT4NfDnJB4AnWPikDVV1KMkdwCHgBHD9RGkuSerNRCv6XiZ2Rb8Oaoeef5ra\ns33+aWqHnn+a2uHn32hr0dWs6H0yVpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4\ng16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPo\nJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16S\nGmfQS1LjDHpJapxBL0mN2zTLi5McBX4KnAROVNXOJBcB/wS8HDgKXFtVP52xT0nSKs26oj8JjKrq\nDVW1sxvbDTxQVa8GHgT2zDiHJGkGswZ9ljnHLmB/d7wfuGbGOSRJM5g16Au4P8kjST7UjW2pqjmA\nqjoOXDzjHJKkGcy0Rw9cUVU/SvLbwH1JHmch/Bdb+v3z9u3b9/zxaDRiNBrN2I4ktWU8HjMej2c6\nR6pOm8PTnSjZCzwLfIiFffu5JFuBr1fV9mXqa5K55+fn2bz5PKrmJ+jiHuBqXuB3y9Iueqjt45x9\n1Q49/zS1Z/v809QOPf80tcPPv1YZeKYkoaoyzWtWvXWT5PwkF3THLwGuBA4CdwHv78reB9y52jkk\nSbObZetmC/DVJNWd59aqui/JvwN3JPkA8ARw7Rr0KUlapVUHfVX9F7BjmfGfAH86S1OSpLXjk7GS\n1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mN\nM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiD\nXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1Ljegv6JFcl+X6SHyT5\nRF/zSJJeWC9Bn+Qc4B+AtwKvA96d5DV9zLV+jYduoGfjoRvo2XjoBno2HrqBHo2HbmDd6WtFvxM4\nUlVPVNUJ4HZgV09zrVPjoRvo2XjoBno2HrqBno2HbqBH46EbWHf6CvpLgCcXff9UNyZJOsM2Dd3A\nJJLw0pe+fcW6+fkf89xzZ6AhSdpAUlVrf9LkD4B9VXVV9/1uoKrqxkU1az+xJJ0FqirT1PcV9C8C\nHgf+BPgR8DDw7qo6vOaTSZJeUC9bN1X1f0luAO5j4X2AWwx5SRpGLyt6SdL6MciTsa0/TJXkaJL/\nSPJokoeH7mdWSW5JMpfku4vGLkpyX5LHk3wtyYVD9rhap7m2vUmeSvKd7uuqIXucRZJtSR5M8liS\ng0k+1o23cv+WXt9Hu/ENfw+TnJvkoS5HHkvyt9341PfujK/ou4epfsDC/v1/A48A11XV989oIz1K\n8p/A71XVM0P3shaS/BHwLPCPVfW73diNwP9U1d91v6wvqqrdQ/a5Gqe5tr3Az6vqs4M2twaSbAW2\nVtWBJBcA32bhmZa/oI37d7rrexcN3MMk51fVc937nt8E/gZ4B1PeuyFW9GfDw1ShoX9HqKq+ASz9\npbUL2N8d7weuOaNNrZHTXBss3MMNr6qOV9WB7vhZ4DCwjXbu33LXd+qZnQ1/D6vq1AfGz2UhU55h\nFfduiDA6Gx6mKuD+JI8k+cuhm+nJxVU1Bwt/2ICLB+5nrd2Q5ECSz2/UbY2lklwG7AC+BWxp7f4t\nur6HuqENfw+TnJPkUeA4MK6qQ6zi3jWz6lxnrqiqNwJXAx/ptgda19K7+jcDr6yqHSz8AdvQf/0H\n6LY1vgJ8vFv5Lr1fG/r+LXN9TdzDqjpZVW9g4W9hf5xkxCru3RBBfwz4nUXfb+vGmlFVP+r++zTw\nVRa2q1ozl2QLPL9P+uOB+1kzVfV0/fLNq88Bbxqyn1kl2cRCCH6pqu7shpu5f8tdX2v3sKp+Bvwr\n8Pus4t4NEfSPAK9K8vIkm4HrgLsG6KMXSc7vVhckeQlwJfC9YbtaE+FX9zzvAt7fHb8PuHPpCzaQ\nX7m27g/PKe9k49+/LwCHquqmRWMt3b9fu74W7mGS3zq15ZTkN4A/Ax5lFfdukM/Rdx91uolfPkz1\n6TPeRE+SvIKFVXyx8EDarRv9+pLcBoyAlwFzwF7gn4EvA5cCTwDXVtX/DtXjap3m2t7Cwl7vSeAo\n8OFTe6IbTZIrgH8DDrLw/2QBn2ThafU72Pj373TX9x42+D1M8noW3mw99eGOL1XV3yf5Taa8dz4w\nJUmN881YSWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuP+H0hXgcnx3S9eAAAAAElF\nTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x115f91210>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.hist(isolet_labels, 26)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot_uniform(num_bins):\n",
+    "    plt.hist(isolet_labels, num_bins)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Questions**\n",
+    "1. Explain why you see apparently non-uniform histograms when you change the bin size.\n",
+    "2. Explain why this is a little cheating and doesn't represent the first distribution at the top of the page. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD+lJREFUeJzt3GGMZWV9x/HvD9eFIoZQW3YTlopGoquxWW1d29Am17RF\nJNElvkDUpFq1MUHUtH3hrm92X1VpqglJwxtFszUQiiYWaAoCwZtGE4EqW1d2xU3aRdi6I6lUJSRm\np/vvizmL4zjL3Dt3zp6ZZ7+fZMKZZ/73PP+Tw/7m2efes6kqJEntOmfoBiRJ/TLoJalxBr0kNc6g\nl6TGGfSS1DiDXpIat2LQJ9mW5MEkjyU5mOSj3fjeJE8l+U73ddWi1+xJciTJ4SRX9nkBkqQXlpU+\nR59kK7C1qg4kuQD4NrALeBfw86r67JL67cBtwJuAbcADwOXlB/YlaRArruir6nhVHeiOnwUOA5d0\nP84yL9kF3F5V81V1FDgC7FybdiVJ05pqjz7JZcAO4KFu6IYkB5J8PsmF3dglwJOLXnaMX/5ikCSd\nYRMHfbdt8xXg493K/mbglVW1AzgOfKafFiVJs9g0SVGSTSyE/Jeq6k6Aqnp6UcnngLu742PApYt+\ntq0bW3pO9+wlaRWqarlt89OadEX/BeBQVd10aqB7k/aUdwLf647vAq5LsjnJK4BXAQ+fptlmv/bu\n3Tt4D16f13c2Xl/L11a1uvXxiiv6JFcA7wUOJnkUKOCTwHuS7ABOAkeBD3fhfSjJHcAh4ARwfa22\nO0nSzFYM+qr6JvCiZX507wu85lPAp2boS5K0Rnwytiej0WjoFnrl9W1sLV9fy9e2Wis+MNXbxIk7\nOpI0pSRUT2/GSpI2KINekhq37oP+5MmTbNt2OZs2nTvR1wc/+LGhW5akdWXd79HPz8+zefO5VD03\nwVnv5cUv/nNOnPjZRD2cc875nDw5yXknr53mnFu2vJzjx49OVLt162XMzT0xUW0fvQ5de7bPP03t\n0PNPUzv0/NP8GVwvVrNHv0GC/jyq5ic46z3A1Sx81H+iLnqoneac5wG/mLCWKc7bR69D157t809T\nO/T809QOP/9G+1DIaoJ+on8CQX35BdP9jytJ01v3e/SSpNkY9JLUOINekhpn0EtS4wx6SWqcQS9J\njTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4\ng16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS41YM+iTbkjyY5LEk\nB5N8rBu/KMl9SR5P8rUkFy56zZ4kR5IcTnJlnxcgSXphk6zo54G/rqrXAX8IfCTJa4DdwANV9Wrg\nQWAPQJLXAtcC24G3ATcnSR/NS5JWtmLQV9XxqjrQHT8LHAa2AbuA/V3ZfuCa7vgdwO1VNV9VR4Ej\nwM417luSNKGp9uiTXAbsAL4FbKmqOVj4ZQBc3JVdAjy56GXHujFJ0gA2TVqY5ALgK8DHq+rZJLWk\nZOn3K9q3b9/zx6PRiNFoNO0pJKlp4/GY8Xg80zlStXI+J9kE/AtwT1Xd1I0dBkZVNZdkK/D1qtqe\nZDdQVXVjV3cvsLeqHlpyzppk7vn5eTZvPo+q+Qku5x7gaib/nZMeavs4Z1+1Q88/Te3ZPv80tUPP\nP03t8PNPkkPrSRKqaqr3PSfduvkCcOhUyHfuAt7fHb8PuHPR+HVJNid5BfAq4OFpmpIkrZ0Vt26S\nXAG8FziY5FEWfk1+ErgRuCPJB4AnWPikDVV1KMkdwCHgBHD9REt3SVIvJtq66WVit27WQe3Q809T\ne7bPP03t0PNPUzv8/BttHdrn1o0kaYMy6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxB\nL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS\n1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mN\nM+glqXEGvSQ1bsWgT3JLkrkk3100tjfJU0m+031dtehne5IcSXI4yZV9NS5JmswkK/ovAm9dZvyz\nVfXG7utegCTbgWuB7cDbgJuTZM26lSRNbcWgr6pvAM8s86PlAnwXcHtVzVfVUeAIsHOmDiVJM5ll\nj/6GJAeSfD7Jhd3YJcCTi2qOdWOSpIGsNuhvBl5ZVTuA48Bn1q4lSdJa2rSaF1XV04u+/Rxwd3d8\nDLh00c+2dWPL2rdv3/PHo9GI0Wi0mnYkqVnj8ZjxeDzTOVJVKxcllwF3V9Xru++3VtXx7vivgDdV\n1XuSvBa4FXgzC1s29wOX1zKTJFlu+NfMz8+zefN5VM1PcDn3AFcDK5+366KH2j7O2Vft0PNPU3u2\nzz9N7dDzT1M7/PyT5NB6koSqmupDLiuu6JPcBoyAlyX5IbAXeEuSHcBJ4CjwYYCqOpTkDuAQcAK4\nfqI0lyT1ZqIVfS8Tu6JfB7VDzz9N7dk+/zS1Q88/Te3w82+0tehqVvQ+GStJjTPoJalxBr0kNc6g\nl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJ\napxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TG\nGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxq0Y9EluSTKX5LuLxi5Kcl+Sx5N8\nLcmFi362J8mRJIeTXNlX45KkyUyyov8i8NYlY7uBB6rq1cCDwB6AJK8FrgW2A28Dbk6StWtXkjSt\nFYO+qr4BPLNkeBewvzveD1zTHb8DuL2q5qvqKHAE2Lk2rUqSVmO1e/QXV9UcQFUdBy7uxi8BnlxU\nd6wbkyQNZK3ejK01Oo8kaY1tWuXr5pJsqaq5JFuBH3fjx4BLF9Vt68aWtW/fvuePR6MRo9Fole1I\nUpvG4zHj8Ximc6Rq5cV4ksuAu6vq9d33NwI/qaobk3wCuKiqdndvxt4KvJmFLZv7gctrmUmSLDf8\na+bn59m8+Tyq5ie4nHuAq5n8LxjpobaPc/ZVO/T809Se7fNPUzv0/NPUDj//JDm0niShqqb6kMuK\nK/oktwEj4GVJfgjsBT4NfDnJB4AnWPikDVV1KMkdwCHgBHD9RGkuSerNRCv6XiZ2Rb8Oaoeef5ra\ns33+aWqHnn+a2uHn32hr0dWs6H0yVpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4\ng16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPo\nJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16S\nGmfQS1LjDHpJapxBL0mN2zTLi5McBX4KnAROVNXOJBcB/wS8HDgKXFtVP52xT0nSKs26oj8JjKrq\nDVW1sxvbDTxQVa8GHgT2zDiHJGkGswZ9ljnHLmB/d7wfuGbGOSRJM5g16Au4P8kjST7UjW2pqjmA\nqjoOXDzjHJKkGcy0Rw9cUVU/SvLbwH1JHmch/Bdb+v3z9u3b9/zxaDRiNBrN2I4ktWU8HjMej2c6\nR6pOm8PTnSjZCzwLfIiFffu5JFuBr1fV9mXqa5K55+fn2bz5PKrmJ+jiHuBqXuB3y9Iueqjt45x9\n1Q49/zS1Z/v809QOPf80tcPPv1YZeKYkoaoyzWtWvXWT5PwkF3THLwGuBA4CdwHv78reB9y52jkk\nSbObZetmC/DVJNWd59aqui/JvwN3JPkA8ARw7Rr0KUlapVUHfVX9F7BjmfGfAH86S1OSpLXjk7GS\n1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mN\nM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiD\nXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1Ljegv6JFcl+X6SHyT5\nRF/zSJJeWC9Bn+Qc4B+AtwKvA96d5DV9zLV+jYduoGfjoRvo2XjoBno2HrqBHo2HbmDd6WtFvxM4\nUlVPVNUJ4HZgV09zrVPjoRvo2XjoBno2HrqBno2HbqBH46EbWHf6CvpLgCcXff9UNyZJOsM2Dd3A\nJJLw0pe+fcW6+fkf89xzZ6AhSdpAUlVrf9LkD4B9VXVV9/1uoKrqxkU1az+xJJ0FqirT1PcV9C8C\nHgf+BPgR8DDw7qo6vOaTSZJeUC9bN1X1f0luAO5j4X2AWwx5SRpGLyt6SdL6MciTsa0/TJXkaJL/\nSPJokoeH7mdWSW5JMpfku4vGLkpyX5LHk3wtyYVD9rhap7m2vUmeSvKd7uuqIXucRZJtSR5M8liS\ng0k+1o23cv+WXt9Hu/ENfw+TnJvkoS5HHkvyt9341PfujK/ou4epfsDC/v1/A48A11XV989oIz1K\n8p/A71XVM0P3shaS/BHwLPCPVfW73diNwP9U1d91v6wvqqrdQ/a5Gqe5tr3Az6vqs4M2twaSbAW2\nVtWBJBcA32bhmZa/oI37d7rrexcN3MMk51fVc937nt8E/gZ4B1PeuyFW9GfDw1ShoX9HqKq+ASz9\npbUL2N8d7weuOaNNrZHTXBss3MMNr6qOV9WB7vhZ4DCwjXbu33LXd+qZnQ1/D6vq1AfGz2UhU55h\nFfduiDA6Gx6mKuD+JI8k+cuhm+nJxVU1Bwt/2ICLB+5nrd2Q5ECSz2/UbY2lklwG7AC+BWxp7f4t\nur6HuqENfw+TnJPkUeA4MK6qQ6zi3jWz6lxnrqiqNwJXAx/ptgda19K7+jcDr6yqHSz8AdvQf/0H\n6LY1vgJ8vFv5Lr1fG/r+LXN9TdzDqjpZVW9g4W9hf5xkxCru3RBBfwz4nUXfb+vGmlFVP+r++zTw\nVRa2q1ozl2QLPL9P+uOB+1kzVfV0/fLNq88Bbxqyn1kl2cRCCH6pqu7shpu5f8tdX2v3sKp+Bvwr\n8Pus4t4NEfSPAK9K8vIkm4HrgLsG6KMXSc7vVhckeQlwJfC9YbtaE+FX9zzvAt7fHb8PuHPpCzaQ\nX7m27g/PKe9k49+/LwCHquqmRWMt3b9fu74W7mGS3zq15ZTkN4A/Ax5lFfdukM/Rdx91uolfPkz1\n6TPeRE+SvIKFVXyx8EDarRv9+pLcBoyAlwFzwF7gn4EvA5cCTwDXVtX/DtXjap3m2t7Cwl7vSeAo\n8OFTe6IbTZIrgH8DDrLw/2QBn2ThafU72Pj373TX9x42+D1M8noW3mw99eGOL1XV3yf5Taa8dz4w\nJUmN881YSWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuP+H0hXgcnx3S9eAAAAAElF\nTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1166651d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "interact(plot_uniform, num_bins=(1,52,1));"
    ]
   },
   {
