minor updates in cts case

--- a/continuous_distributions.ipynb
+++ b/continuous_distributions.ipynb
@@ -18,7 +18,7 @@
     " referred to as isolet1, isolet2, isolet3, isolet4, and isolet5.\n",
     " The data appears in isolet1+2+3+4.data in sequential order, first\n",
     " the speakers from isolet1, then isolet2, and so on.  The test\n",
-    " set, isolet5, is a separate file.\""
+    " set, isolet5, is a separate file.\"\n"
    ]
   },
   {
@@ -67,6 +67,106 @@
     "isolet = pd.read_csv(PATH_DATA + 'isolet1+2+3+4.data', header=None)\n",
     "isolet_features = isolet.drop(617, axis=1)\n",
     "isolet_labels = isolet[617]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"The features include spectral coefficients; contour\n",
+    " features, sonorant features, pre-sonorant features, and\n",
+    " post-sonorant features.  Exact order of appearance of the\n",
+    " features is not known.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>607</th>\n",
+       "      <th>608</th>\n",
+       "      <th>609</th>\n",
+       "      <th>610</th>\n",
+       "      <th>611</th>\n",
+       "      <th>612</th>\n",
+       "      <th>613</th>\n",
+       "      <th>614</th>\n",
+       "      <th>615</th>\n",
+       "      <th>616</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.4394</td>\n",
+       "      <td>-0.093</td>\n",
+       "      <td>0.1718</td>\n",
+       "      <td>0.462</td>\n",
+       "      <td>0.6226</td>\n",
+       "      <td>0.4704</td>\n",
+       "      <td>0.3578</td>\n",
+       "      <td>0.0478</td>\n",
+       "      <td>-0.1184</td>\n",
+       "      <td>-0.231</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.3334</td>\n",
+       "      <td>0.4102</td>\n",
+       "      <td>0.2052</td>\n",
+       "      <td>0.3846</td>\n",
+       "      <td>0.359</td>\n",
+       "      <td>0.5898</td>\n",
+       "      <td>0.3334</td>\n",
+       "      <td>0.641</td>\n",
+       "      <td>0.5898</td>\n",
+       "      <td>-0.4872</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 617 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0      1       2      3       4       5       6       7       8    \\\n",
+       "0 -0.4394 -0.093  0.1718  0.462  0.6226  0.4704  0.3578  0.0478 -0.1184   \n",
+       "\n",
+       "     9     ...       607     608     609     610    611     612     613  \\\n",
+       "0 -0.231   ...    0.3334  0.4102  0.2052  0.3846  0.359  0.5898  0.3334   \n",
+       "\n",
+       "     614     615     616  \n",
+       "0  0.641  0.5898 -0.4872  \n",
+       "\n",
+       "[1 rows x 617 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isolet_features[:1]"
    ]
   },
   {
@@ -145,29 +245,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 2. Exponential"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -218,12 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# we can generate continuous uniform random variable using the norms above and transforming it"
+   ]
   },
   {
    "cell_type": "code",
